--- a/admin/login.html
+++ b/admin/login.html
@@ -38,6 +38,59 @@
     </div>
   </div>
 
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">温馨提示</h4>
+        </div>
+        <div class="modal-body">
+            
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="button" class="btn btn-primary">确定</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
+<script>
+  // 给登入按钮注册点击事件
+  
+  $('.input_sub').on('click',function(e){
+    e.preventDefault();
+    let username = $('.input_txt').val().trim();
+    let password = $('.input_pass').val().trim();
+    // 判断用户名和密码是否有输入
+    if(username.length === 0 || password.length === 0){
+      $('.modal-body').text('账号密码都不输，你特么要上天？')
+      $('#myModal').modal()
+    }
+    // 获取ajax请求，判断账号密码
+    $.ajax({
+      url:'http://localhost:8080/api/v1/admin/user/login',
+      type:'post',
+      data:{
+        username : username,
+        password : password
+      },
+      success : function(res){
+        if(res.code === 200){
+          localStorage.setItem('token',res.token)
+          location.href = './index.html'
+        }else{
+          $('.modal-body').text('账号密码错误')
+          $('#myModal').modal()
+        }
+      }
+    })
+
+
+  })
+</script>
 
 </html>
