--- a/admin/index.html
+++ b/admin/index.html
@@ -55,4 +55,26 @@
         </div>
     </div>
 </body>
+
+<script>
+    // ajax获取用户的信息用于来展示用户
+    $.ajax({
+        url: 'http://localhost:8080/api/v1/admin/user/info',
+        type: 'get',
+        success: function(res){
+            console.log(res);
+            $('.user_info > span').html(`欢迎&nbsp;&nbsp;${res.data.nickname}`);
+            $('.user_info > img').attr('src',res.data.userPic);
+            $('.user_center_link > img').attr('src',res.data.userPic);
+        }
+    })
+    
+    // 退出按钮
+    $('.logout').on('click',function(){
+        localStorage.removeItem('token')
+        location.href = './login.html'
+    })
+
+
+</script>
 </html>
